ready demo